--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -35,9 +35,21 @@
   </action>
 
   <fragment
+    android:id="@+id/game_fragment"
+    android:name="edu.cnm.deepdive.jata.controller.GameFragment"
+    tools:layout="@layout/fragment_game">
+  </fragment>
+
+  <fragment
     android:id="@+id/home_fragment"
     android:name="edu.cnm.deepdive.jata.controller.HomeFragment"
-    tools:layout="@layout/fragment_home"/>
+    tools:layout="@layout/fragment_home">
+
+    <action
+      android:id="@+id/navigate_to_game"
+      app:destination="@id/game_fragment"/>
+
+  </fragment>
 
   <fragment
     android:id="@+id/navigation_sign_in_demo"
