Click listeners on ships working.

--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -4,6 +4,20 @@
   android:layout_height="match_parent"
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/horizontal_guideline"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    app:layout_constraintGuide_percent="0"/>
+
+  <androidx.constraintlayout.widget.Guideline
+    android:id="@+id/vertical_guideline"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_constraintGuide_percent="0"/>
+
   <edu.cnm.deepdive.jata.view.BoardView
     android:id="@+id/game_board"
     android:layout_width="0dp"
@@ -13,6 +27,16 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"/>
 
+  <View
+    android:id="@+id/pop_up_menu_focus"
+    android:layout_width="@dimen/half_dynamic_spacing"
+    android:layout_height="@dimen/half_dynamic_spacing"
+    android:visibility="invisible"
+    app:layout_constraintTop_toTopOf="@id/horizontal_guideline"
+    app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"
+    app:layout_constraintStart_toStartOf="@id/vertical_guideline"
+    app:layout_constraintEnd_toEndOf="@id/vertical_guideline"/>
+
   <Button
     android:id="@+id/fire_button"
     android:layout_width="wrap_content"
@@ -20,7 +44,7 @@
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
-    android:text="Fire shots"
+    android:text="@string/fire_shots"
     android:layout_margin="@dimen/half_dynamic_spacing"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
