--- a/app/src/main/res/layout/fragment_board.xml
+++ b/app/src/main/res/layout/fragment_board.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  android:padding="@dimen/half_dynamic_spacing">
 
   <androidx.constraintlayout.widget.Guideline
     android:id="@+id/horizontal_guideline"
@@ -38,13 +39,15 @@
     app:layout_constraintEnd_toEndOf="@id/vertical_guideline"/>
 
   <Button
-    android:id="@+id/fire_button"
+    android:id="@+id/place_ships"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:visibility="gone"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintBottom_toBottomOf="parent"
-    android:text="@string/fire_shots"
+    android:text="@string/armada_ready_prepare_for_battle"
     android:layout_margin="@dimen/half_dynamic_spacing"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
