--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -16,7 +16,18 @@
     android:layout_width="match_parent"
     android:layout_height="0dp"
     app:layout_constraintTop_toBottomOf="@id/player_boards"
-    app:layout_constraintBottom_toBottomOf="parent"/>
+    app:layout_constraintBottom_toTopOf="@id/fire_button"/>
+
+  <Button
+    android:id="@+id/fire_button"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:visibility="gone"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:text="@string/fire_shots"
+    android:layout_margin="@dimen/half_dynamic_spacing"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
