--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -29,5 +29,15 @@
     android:text="@string/fire_shots"
     android:layout_margin="@dimen/half_dynamic_spacing"/>
 
+  <TextView
+    android:id="@+id/shots_remaining"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintStart_toEndOf="@id/fire_button"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintBottom_toBottomOf="parent"
+    android:text="@string/shots_remaining"
+    android:layout_margin="@dimen/half_dynamic_spacing"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
