--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -14,6 +14,7 @@
   </integer-array>
 
   <string-array name="player_count">
+    <item>2</item>
     <item>3</item>
     <item>4</item>
     <item>5</item>
